TestSuite/errors/namespaces/err0327.pas
namespace NS1;

uses NS2;
type
  T1 = class end;

end.